add Edit functionality

--- a/src/Components/Tasks/EditPopUp/EditPopUp.css
+++ b/src/Components/Tasks/EditPopUp/EditPopUp.css
@@ -1,3 +1,9 @@
-#EditPopUP {
+#EditPopUp {
     display: none;
+}
+
+#EditDescription{
+    resize: none;
+    height: 200px;
+    width: 500px;    
 }
